# finance-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/src/: main.py
backend/src/accounts/: models.py  router.py  schemas.py  service.py
backend/src/alembic/: README  env.py
backend/src/alembic/versions/: 07f6ef796d7f_add_industries.py  3c85f08c9340_inital_setup.py  d7ba96d578f5_add_sector_id_to_assets.py  f50ef0de17c9_add_trading_212_symbol_to_assets.py
backend/src/assets/: models.py  schemas.py  service.py
backend/src/categories/: models.py  schemas.py  service.py
backend/src/connections/: models.py  router.py  schemas.py  service.py
backend/src/core/: config.py  database.py  logging.py  utils.py
backend/src/industries/: models.py  schemas.py  service.py
backend/src/integrations/openfigi/: client.py  sync.py
backend/src/integrations/trading212/: client.py  mapper.py  sync.py
backend/src/integrations/yahoofinance/: sync.py
backend/src/scheduler/: scheduler.py
backend/src/sectors/: models.py  schemas.py  service.py
backend/src/transactions/: models.py  router.py  schemas.py  service.py
frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/accounts/: Account.tsx  AccountsList.tsx  Transaction.tsx  TransactionsList.tsx
frontend/src/auth/: AuthenticationPage.tsx  ClerkProviderWithRoutes.tsx
frontend/src/connections/: Connection.tsx  ConnectionsList.tsx
(+4 files in other folders)
