[project]
name = "finance-dashboard"
version = "0.1.0"
description = "Personal finance dashboard app."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "clerk-backend-api>=5.0.6",
    "fastapi[standard]>=0.135.3",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.48",
    "yfinance>=1.2.2",
]
